Start of team page.

--- a/app/views/header.html
+++ b/app/views/header.html
@@ -6,6 +6,9 @@
         <li ui-sref-active="active">
             <a ui-sref="bunches">Rides</a>
         </li>
+        <li ui-sref-active="active">
+            <a ui-sref="myteams">Teams</a>
+        </li>
         <li ng-hide="isAuthenticated()" ui-sref-active="active">
             <a ui-sref="login">Login</a>
         </li>
