Update to add break up into teams

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -199,3 +199,8 @@ body {
     height: 50px;
     width: 50px;
 }
+/* override select drop down background  */
+
+.text-muted {
+    color: #8dc63f;
+}
