--- a/app/views/bunches.html
+++ b/app/views/bunches.html
@@ -1,6 +1,7 @@
 <span style="position: absolute;display: block;top: 50%;left: 50%;" us-spinner="{radius:20, width:8, length: 16, color:'#8dc63f'}" spinner-key="loginSpin" spinner-start-active="false"></span>
 <hr>
 <div>
+    <input class="form-control" ng-model="searchText" placeholder="Search...">
     <h3>Rides <button ng-click="refresh()" class="pull-right btn btn-success">Refresh</button></h3>
 </div>
 <br>
