--- a/app/views/myteams.html
+++ b/app/views/myteams.html
@@ -2,15 +2,28 @@
 <hr>
 <button ng-click="addBunch()" class="btn btn-block btn-success">Create a team</button>
 <p></p>
+<input class="form-control" ng-model="searchText" placeholder="Search...">
 <h3>My teams</h3>
 <hr>
-<div ng-repeat="bunch in bunches">
-    <h3>{{bunch.name}}</h3>
-    <p>{{bunch.desc}}</p>
-    <p>Ability: {{bunch.ability}}</p>
-    <p>Policy: {{bunch.policy}}</p>
-    <div>
-        <button ng-click="addRide(bunch)" class="pull-left btn btn-success">Add a ride</button>
+<div class="row" ng-repeat="bunch in bunches | filter:searchText">
+    <div class="container">
+        <div class="col-md-8">
+            <h3>{{bunch.name}}</h3>
+            <p>{{bunch.desc}}</p>
+            <p>Ability: {{bunch.ability}}</p>
+            <p>Policy: {{bunch.policy}}</p>
+        </div>
+        <div class="col-md-4">
+            <h4 class="">Rides</h4>
+            <div class="" ng-repeat="ride in bunch.ridedetails ">
+                <p>
+                    {{ride.name}}
+                </p>
+            </div>
+            <div class="">
+                <button ng-click="addRide(bunch) " class="pull-left btn btn-success ">Add a ride</button>
+            </div>
+        </div>
     </div>
     <br>
     <br>
