--- a/app/views/addride.html
+++ b/app/views/addride.html
@@ -36,12 +36,11 @@
     </div>
     <p></p>
     <h4>Routes</h4>
-    <hr>
     <div ng-show="isstravaauth && !showmap">Loading strava routes......
     </div>
 
     <div ng-show="isstravaauth && showmap">
-
+        <hr>
         <h4>Strava Route</h4>
         <!--<div>{{stravaride.selected.map.summary_polyline}}</div>-->
         <ui-select theme="bootstrap" ng-model="stravaride.selected" on-select="getStravaRoute()">
@@ -55,23 +54,39 @@
             <leaflet id="stravamap" center="cen" paths="paths" layers="layers" height="380px"></leaflet>
         </div>
         <p></p>
-        <button type="button" ng-disabled="stravaride.selected == undefined" class="btn btn-success" ng-click="addRoute();">Add route</button>
-        <div class="row">
-            <div ng-repeat="route in routes">
+        <button type="button" ng-disabled="stravaride.selected == undefined" class="btn btn-success" ng-click="addRoute();">{{routeButtonStrava}}</button>
+    </div>
+    <hr>
+    <div ng-show="!isstravaauth">
+        <div>
+            <button type="button" class="btn btn-success" ng-click="stravaAuth();">Login with strava to add strava routes</button>
+        </div>
+    </div>
+    <p></p>
+    <p></p>
+    <span><input class="form-control" ng-model="routename" name="routename" type="text" placeholder="{{routePlaceholder}}" ></span>
+    <p></p>
+    <button type="button" ng-disabled="!addride.routename.$dirty" class="btn btn-success" ng-click="addRouteNonStrava();">{{routeButton}}</button>
+
+    <div ng-show="routes.length > 0">
+        <hr>
+        <h4>Routes for team {{bunch.name}}</h4>
+    </div>
+
+    <div class="container">
+        <div ng-repeat="route in routes">
+            <div class="row">
                 <p></p>
                 <div class="col-lg-6">
-                    <span>  {{ route.name }} </span>
+                    <span><input class="form-control" type="text" ng-model="route.name"></span>
                 </div>
                 <div class="pull-right col-lg-6">
                     <button ng-click="deleteRoute($index)" class="pull-left btn btn-danger">Remove</button>
                 </div>
             </div>
         </div>
-
     </div>
-    <div ng-show="!isstravaauth">
-        <button type="button" class="btn btn-success" ng-click="stravaAuth();">Login with strava to add routes</button>
-    </div>
+    <hr>
     <p></p>
     <button ng-click="" ng-disabled="addride.$invalid" class="btn btn-lg btn-success btn-block" type="submit">
         Add ride to team {{bunch.name}}
