--- a/app/views/tabcontent.html
+++ b/app/views/tabcontent.html
@@ -4,28 +4,38 @@
 <div class="col-md-12">
     <hr>
 </div>
-<div ng-repeat="bunch in bunches | filter:searchText">
-    <div class="col-md-6">
-        <h4>Team: {{bunch.bunchname}}<h4> 
-        <h4>Ride: {{bunch.name}} @ {{bunch.date | date : 'mediumTime'}}</h4>
-        <div class="col-md-4">
-            <button ng-click="in(bunch.id)" class="btn btn-success">Attending</button>
+
+<div ng-repeat="bunch in bunches | filter:searchText track by bunch.id">
+    <div>
+        <div>
+            <button tooltip="comments" class="pull-right btn btn-xs btn-success"><span><i class="fa fa-comment"> 3 </i></span>
+            </button>
+            <span> </span>
+            <button tooltip="attending" class="pull-right btn btn-xs btn-success"><span><i class="fa fa-users"> {{bunch.riderarray.length}} </i></span>
+            </button>
         </div>
-        <div class="col-md-4">
-            <button ng-click="out(bunch.id)" class="btn btn-danger">Not Attending</button>
+        <div class="col-md-6">
+            <h4><b>Team:</b> {{bunch.bunchname}}<h4>
+        <h4><b>Ride:</b> {{bunch.name}} @ {{bunch.date | date : 'mediumTime'}}</h4>
+            <div class="col-md-4">
+                <button ng-click="in(bunch.id)" class="btn btn-success">Attending</button>
+            </div>
+            <div class="col-md-4">
+                <button ng-click="out(bunch.id)" class="btn btn-danger">Not Attending</button>
+            </div>
         </div>
-    </div>
-    <div class="col-md-6">
-        <h4>Riders attending</h4>
-        <span ng-repeat="rider in bunch.riderarray " style="padding-right:10px;">
-            <img class="roundrect" src={{rider.imageurl}} tooltip={{rider.firstname}}></img>
-        </span>
-    </div>
-    <div class="col-md-12">
-        <hr>
+        <div class="col-md-6">
+            <h4>Riders attending</h4>
+            <div ng-repeat="rider in bunch.riderarray " style="padding-right:10px;">
+                <img class="roundrect" src={{rider.imageurl}} tooltip={{rider.firstname}}></img>
+            </div>
+        </div>
+        <div class="col-md-12">
+            <hr>
+        </div>
     </div>
 </div>
-<div ng-repeat="bunch in oneoffbunches | filter:searchText">
+<div ng-repeat="bunch in oneoffbunches | filter:searchText track by bunch.id">
     <div class="col-md-6 ">
         <h4>Team: {{bunch.bunchname}}<h4> 
         <h4>Ride: {{bunch.name}} @ {{bunch.date | date : 'mediumTime'}}</h4>
