--- a/app/views/comments.html
+++ b/app/views/comments.html
@@ -1,41 +1,24 @@
-{{rideID}}
-
-<div class="detailBox">
-    <div class="titleBox">
-        <label>Comment Box</label>
-        <button type="button" class="close" aria-hidden="true">&times;</button>
-    </div>
-    <div class="commentBox">
-
-        <p class="taskDescription">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-    </div>
-    <div class="actionBox">
-        <ul class="commentList">
-            <li>
-                <div class="commenterImage">
-                    <img src="http://lorempixel.com/50/50/people/6" />
-                </div>
-                <div class="commentText">
-                    <p class="">Hello this is a test comment.</p> <span class="date sub-text">on March 5th, 2014</span>
-
-                </div>
-            </li>
-            <li>
-                <div class="commenterImage">
-                    <img src="http://lorempixel.com/50/50/people/7" />
-                </div>
-                <div class="commentText">
-                    <p class="">Hello this is a test comment and this comment is particularly very long and it goes on and on and on.</p> <span class="date sub-text">on March 5th, 2014</span>
-                </div>
-            </li>
-            <li>
-                <div class="commenterImage">
-                    <img src="http://lorempixel.com/50/50/people/9" />
-                </div>
-                <div class="commentText">
-                    <p class="">Hello this is a test comment.</p> <span class="date sub-text">on March 5th, 2014</span>
-                </div>
-            </li>
+<span style="position: absolute;display: block;top: 50%;left: 50%;" us-spinner="{radius:20, width:8, length: 16, color:'#8dc63f'}" spinner-key="loginSpin" spinner-start-active="false"></span>
+<hr>
+<div>
+    <h3>Attending and Comments</h3>
+</div>
+<h3>Comments</h3>
+<hr>
+<div class="container">
+    <div>
+        <ul>
+            <div class="row" ng-repeat="comment in comments">
+                <li>
+                    <div class="commenterImage">
+                        <img src={{comment.imageurl}} />
+                    </div>
+                    <div class="commentText">
+                        <p class="">{{comment.comment}}</p>
+                        <!--<span class="date sub-text">on March 5th, 2014</span>-->
+                    </div>
+                </li>
+            </div>
         </ul>
         <form class="form-inline" role="form">
             <div class="form-group">
