--- a/app/views/tabcontent.html
+++ b/app/views/tabcontent.html
@@ -8,10 +8,10 @@
 <div ng-repeat="bunch in bunches | filter:searchText track by bunch.id">
     <div>
         <div>
-            <button ng-click="gotocomments(bunch.id)" tooltip="comments" class="pull-right btn btn-xs btn-success"><span><i class="fa fa-comment"> 3 </i></span>
+            <button ng-click="gotocomments(bunch.id)" tooltip="comments" class="pull-right btn btn-xs btn-success"><span><i class="fa fa-comment"> {{bunch.commentcount}} </i></span>
             </button>
             <span> </span>
-            <button ng-click="gotocomments(bunch)" tooltip="attending" class="pull-right btn btn-xs btn-success"><span><i class="fa fa-users"> {{bunch.riderarray.length}} </i></span>
+            <button ng-click="gotocomments(bunch.id)" tooltip="attending" class="pull-right btn btn-xs btn-success"><span><i class="fa fa-users"> {{bunch.riderarray.length}} </i></span>
             </button>
         </div>
         <div class="col-md-6">
@@ -38,10 +38,10 @@
 <div ng-repeat="bunch in oneoffbunches | filter:searchText track by bunch.id">
     <div>
         <div>
-            <button ng-click="gotocomments(bunch)" tooltip="comments" class="pull-right btn btn-xs btn-success"><span><i class="fa fa-comment"> 3 </i></span>
+            <button ng-click="gotocomments(bunch.id)" tooltip="comments" class="pull-right btn btn-xs btn-success"><span><i class="fa fa-comment"> 3 </i></span>
             </button>
             <span> </span>
-            <button ng-click="gotocomments(bunch)" tooltip="attending" class="pull-right btn btn-xs btn-success"><span><i class="fa fa-users"> {{bunch.riderarray.length}} </i></span>
+            <button ng-click="gotocomments(bunch.id)" tooltip="attending" class="pull-right btn btn-xs btn-success"><span><i class="fa fa-users"> {{bunch.riderarray.length}} </i></span>
             </button>
         </div>
         <div class="col-md-6 ">
