--- a/app/views/bunchcreate.html
+++ b/app/views/bunchcreate.html
@@ -1,55 +1,60 @@
 <div>
     <span style="position: absolute;display: block;top: 50%;left: 50%;" us-spinner="{radius:20, width:8, length: 16, color:'#8dc63f'}" spinner-key="createSpin" spinner-start-active="false"></span>
 </div>
-<form ng-submit="submit()" name="createbunch" class="form" novalidate>
-    <h3 class="form-signin-heading">Create a team.</h3>
-    <hr>
-    <input name="name" ng-model="name" type="text" class="form-control" placeholder="Name of team" required />
-    <p></p>
-    <ui-select theme="bootstrap" ng-model="profile.selected" required>
-        <ui-select-match placeholder="Select profile...">{{$select.selected.name}}</ui-select-match>
-        <ui-select-choices repeat="profile in profiles | filter:{ name: $select.search }">
-            <div ng-bind-html="profile.name"></div>
-        </ui-select-choices>
-    </ui-select>
-    <p></p>
-    <div ng-show="profile.selected.name == 'Business'">
-        <input name="website" ng-model="website" type="text" class="form-control" placeholder="Website" />
-    </div>
-
-
-    <div>
-        <div class="btn-group">
-            <h4>Is this a private team? {{privateradio || 'null'}}</h4>
-            <label class="btn btn-success" ng-model="privateradio" btn-radio="'Yes'">Yes</label>
-            <label class="btn btn-success" ng-model="privateradio" btn-radio="'No'">No</label>
+<div>
+    <form ng-submit="submit()" name="createbunch" class="form" novalidate>
+        <h3 class="form-signin-heading">Create a team.</h3>
+        <hr>
+        <input name="name" ng-model="name" type="text" class="form-control" placeholder="Name of team" required />
+        <p></p>
+        <ui-select theme="bootstrap" ng-model="profile.selected" required>
+            <ui-select-match placeholder="Select profile...">{{$select.selected.name}}</ui-select-match>
+            <ui-select-choices repeat="profile in profiles | filter:{ name: $select.search }">
+                <div ng-bind-html="profile.name"></div>
+            </ui-select-choices>
+        </ui-select>
+        <p></p>
+        <div ng-show="profile.selected.name == 'Business'">
+            <input name="website" ng-model="website" type="text" class="form-control" placeholder="Website" />
         </div>
-    </div>
-    <p></p>
-    <h4>Meeting location</h4>
-    <leaflet class="form-control" markers="markers" id="meetinglocation" defaults="defaults" center="center" height="380px" ng-click="logLeafletData('meetinglocation')"></leaflet>
-    <p></p>
-    <ui-select theme="bootstrap" ng-model="ability.selected" required>
-        <ui-select-match placeholder="Select ability...">{{$select.selected.name}}</ui-select-match>
-        <ui-select-choices repeat="ability in abilities | filter:{ name: $select.search }">
-            <div ng-bind-html="ability.name"></div>
-        </ui-select-choices>
-    </ui-select>
-    <p></p>
-    <ui-select theme="bootstrap" ng-model="policy.selected" required>
-        <ui-select-match placeholder="Select policy...">{{$select.selected.name}}</ui-select-match>
-        <ui-select-choices repeat="policy in policies | filter:{ name: $select.search }">
-            <div ng-bind-html="policy.name"></div>
-        </ui-select-choices>
-    </ui-select>
 
-    <p></p>
-    <textarea name="desc" ng-model="desc" type="desc" class="form-control" placeholder="About" />
-    <div>
-    </div>
-    <p></p>
-    <button ng-click="" ng-disabled="createbunch.$invalid" class="btn btn-lg btn-success btn-block" type="submit">
-        Create
-    </button>
-    <br />
-</form>
+
+        <div>
+            <div class="btn-group">
+                <h4>Is this a private team? {{privateradio || 'null'}}</h4>
+                <label class="btn btn-success" ng-model="privateradio" btn-radio="'Yes'">Yes</label>
+                <label class="btn btn-success" ng-model="privateradio" btn-radio="'No'">No</label>
+            </div>
+        </div>
+        <p></p>
+        <h4>Meeting location</h4>
+        <leaflet class="form-control" markers="markers" id="meetinglocation" defaults="defaults" center="center" height="200px" ng-click="logLeafletData('meetinglocation')"></leaflet>
+        <p></p>
+        <ui-select theme="bootstrap" ng-model="ability.selected" required>
+            <ui-select-match placeholder="Select ability...">{{$select.selected.name}}</ui-select-match>
+            <ui-select-choices repeat="ability in abilities | filter:{ name: $select.search }">
+                <div ng-bind-html="ability.name"></div>
+            </ui-select-choices>
+        </ui-select>
+        <p></p>
+        <ui-select theme="bootstrap" ng-model="policy.selected" required>
+            <ui-select-match placeholder="Select policy...">{{$select.selected.name}}</ui-select-match>
+            <ui-select-choices repeat="policy in policies | filter:{ name: $select.search }">
+                <div ng-bind-html="policy.name"></div>
+            </ui-select-choices>
+        </ui-select>
+
+        <p></p>
+        <textarea name="desc" ng-model="desc" type="desc" class="form-control" placeholder="About" />
+        <div>
+        </div>
+        <p></p>
+        <button ng-click="" ng-disabled="createbunch.$invalid" class="btn btn-lg btn-success btn-block" type="submit">
+            Create
+        </button>
+        <br />
+    </form>
+    <h3>Rides.</h3>
+    <p>Create your bunch above and then you will be able to add rides!</p>
+    <hr>
+</div>
