--- a/app/views/locationset.html
+++ b/app/views/locationset.html
@@ -1,5 +1,5 @@
 <ui-select theme="bootstrap" ng-model="local.selected" required>
-    <ui-select-match placeholder="Select location...">{{$select.selected.name}}</ui-select-match>
+    <ui-select-match placeholder="Select closest location to you...">{{$select.selected.name}}</ui-select-match>
     <ui-select-choices repeat="local in locations | filter:{ name: $select.search }">
         <div ng-bind-html="local.name"></div>
     </ui-select-choices>
