--- a/app/views/header.html
+++ b/app/views/header.html
@@ -9,6 +9,9 @@
         <li ui-sref-active="active">
             <a ui-sref="myteams">Teams</a>
         </li>
+        <li ui-sref-active="active">
+            <a ui-sref="friends">Friends</a>
+        </li>
         <li ng-hide="isAuthenticated()" ui-sref-active="active">
             <a ui-sref="login">Login</a>
         </li>
