change team to bunch.

--- a/app/views/header.html
+++ b/app/views/header.html
@@ -7,7 +7,7 @@
             <a ui-sref="bunches">Rides</a>
         </li>
         <li ui-sref-active="active">
-            <a ui-sref="myteams">Teams</a>
+            <a ui-sref="myteams">Bunches</a>
         </li>
         <li ui-sref-active="active">
             <a ui-sref="friends">Friends</a>
