--- a/app/views/myteams.html
+++ b/app/views/myteams.html
@@ -1,10 +1,16 @@
 <span style="position: absolute;display: block;top: 50%;left: 50%;" us-spinner="{radius:20, width:8, length: 16, color:'#8dc63f'}" spinner-key="loginSpin" spinner-start-active="false"></span>
 <hr>
-<button ng-click="addBunch()" class="btn btn-block btn-success">Create a team</button>
+<button ng-click="addBunch()" class="btn btn-block btn-success">Create a bunch</button>
 <p></p>
 <input class="form-control" ng-model="searchText" placeholder="Search...">
-<h3>My teams</h3>
-<hr>
+<div ng-show="bunches.length > 0">
+    <h3>My bunches</h3>
+    <hr>
+</div>
+<div ng-show="bunches.length <= 0">
+    <h3>You have no bunches!</h3>
+    <p>Create a bunch and then add some rides!</p>
+</div>
 <div class="row" ng-repeat="bunch in bunches | filter:searchText">
     <div class="container">
         <div class="col-md-8">
@@ -23,6 +29,9 @@
             <div class="">
                 <button ng-click="addRide(bunch) " class="pull-left btn btn-success ">Add a ride</button>
             </div>
+        </div>
+        <div class="col-md-12">
+            <button ng-click="addRide(bunch) " class="pull-left btn btn-success ">Edit bunch</button>
         </div>
     </div>
     <br>
