Add edit bunch files.

--- a/app/views/myteams.html
+++ b/app/views/myteams.html
@@ -31,7 +31,7 @@
             </div>
         </div>
         <div class="col-md-12">
-            <button ng-click="addRide(bunch) " class="pull-left btn btn-success ">Edit bunch</button>
+            <button ng-click="editBunch(bunch) " class="pull-left btn btn-success ">Edit bunch</button>
         </div>
     </div>
     <br>
