Edit bunch now working.

--- a/app/views/editbunch.html
+++ b/app/views/editbunch.html
@@ -71,7 +71,7 @@
     </ui-select>
 
     <p></p>
-    <textarea name="desc" ng-model="desc" type="desc" class="form-control" placeholder="About" />
+    <textarea name="bunch.desc" ng-model="bunch.desc" type="desc" class="form-control" placeholder="About" />
     <div>
     </div>
     <p></p>
