show riders on details screen

--- a/app/views/editbunch.html
+++ b/app/views/editbunch.html
@@ -78,4 +78,7 @@
     <button ng-click="" class="btn btn-lg btn-success btn-block" type="submit">
         Save
     </button>
+    <button ng-click="cancel()" class="btn btn-lg btn-success btn-block" type="button">
+        Cancel
+    </button>
 </form>
