--- a/app/views/ridedetails.html
+++ b/app/views/ridedetails.html
@@ -43,3 +43,8 @@
 <div ng-repeat="route in ridedetails.routes">
     <p>{{route.name}}</p>
 </div>
+
+<hr>
+<div ng-repeat="route in routes">
+    <p>{{route.name}}</p>
+</div>
