--- a/app/views/ridedetails.html
+++ b/app/views/ridedetails.html
@@ -1,5 +1,9 @@
 <span style="position: absolute;display: block;top: 50%;left: 50%;" us-spinner="{radius:20, width:8, length: 16, color:'#8dc63f'}" spinner-key="loginSpin" spinner-start-active="false"></span>
 <hr>
+<button ng-click="back()" class="btn btn-lg btn-success btn-block" type="button">
+    Back
+</button>
+<p></p>
 <p>Ride details</p>
 <p>Team name: {{ridedetails.bunchname}} </p>
 <p>Ride name: {{ridedetails.name}} </p>
