--- a/app/views/editbunch.html
+++ b/app/views/editbunch.html
@@ -24,7 +24,7 @@
     </div>
     <div>
         <p></p>
-        <div ng-show="private.selected.name == 'Private'">
+        <div>
             <hr>
             <div ng-show="friends.length > 0">
                 <h4>Invite Friends</h4>
